2004-11-15  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkbutton.[hc]: Add a GtkButton::image property with setter 
	and getter, which allows to construct stock-like buttons with 
	custom images and/or text.  (#62466, Jonathan Blandford, patch by
	Matthias Clasen)

	* gtk/gtkimagemenuitem.c (gtk_image_menu_item_set_image): Add 
	some more docs.

Mon Nov 15 14:25:21 2004  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeviewcolumn.c (_gtk_tree_view_column_cell_set_dirty):
	Patch from Gavin Romig-Koch <gavin@redhat.com> to no longer reset
	the resized_width when marking a column dirty.

2004-11-15  Matthias Clasen  <mclasen@redhat.com>

	* modules/engines/Makefile.am (SUBDIRS): Add pixbuf.

	* gtk/gtkbutton.c: 
	* gtk/gtkimagemenuitem.c: Don't use one signal handler per
	instance to track changes to the gtk-menu-images and
	gtk-button-images settings. Instead use a single handler which 
	iterates over the widget hierarchy. (#143668)

	* gtk/gtktreemodel.c (gtk_tree_path_prev): Return FALSE if
	depth is 0 (noticed by Tim Janik)

2004-11-15 Erwann Chenede - <erwann.chenede@sun.com>

	* gtk/gtkfilesel.c: fix unselect in multiple selection (#156805)

2004-11-15  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtklabel.c: Include gtkdnd.h  (#158243, Kazuki IWAMOTO)

2004-11-13  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkspinbutton.c (gtk_spin_button_new_with_range): Allow
	min == max.  (#158225, Vasco Alexandre da Silva Costa)

2004-11-12  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcombobox.c (gtk_combo_box_class_init): Add more docs.

	* gtk/gtkfilefilter.c (gtk_file_filter_filter): Fix typo in
	docs.

	* gtk/gtklabel.c (gtk_label_do_popup): Adjust to the current
	entry popup menu.
	(gtk_label_button_press, gtk_label_button_release) 
	(gtk_label_drag_data_get): Implement DND for selectable labels.

	Make GDK+ compile with X11R5 (#148032)
	
	* gdk/x11/xsettings-client.c (xsettings_client_new): 
	* gdk/x11/gdkproperty-x11.c (_gdk_x11_precache_atoms): Only