@@ -1673,6 +1673,7 @@ gtk/xdgmime/Makefile
 modules/Makefile
 modules/input/Makefile
 modules/engines/Makefile
+modules/engines/pixbuf/Makefile
 modules/engines/ms-windows/Makefile
 modules/engines/ms-windows/Theme/Makefile
 modules/engines/ms-windows/Theme/gtk-2.0/Makefile
